--- a/style.css
+++ b/style.css
@@ -9,9 +9,6 @@ body {
   margin-left: 320px;
 }
 
-.header__mobilemenu {
-  display: none;
-}
 
 .header {
   display: flex;
@@ -41,5 +38,141 @@ ul svg {
 
 .menu::-webkit-scrollbar {
   width: 0;
+}
+.menu_button {  background-color: transparent;
+  border-color: transparent;  font-size: 16px;
+  color: #7e7e82;  padding-left: 27px;
+  padding-right: 27px;  padding-top: 16px;
+  padding-bottom: 16px;
+  border-radius: 10px;}
+.sidebarmenu {
+  position: absolute;  left: 0px;
+  width: 320px;  height: 3000px;
+  background-color: white;
+}
+.sidebar__header--menu1 {
+  display: flex;  width: 40%;
+  justify-content: space-between;  cursor: pointer;
+}
+.sidebar__header--menu {  margin-top: 10px;
+  height: 40px;  width: auto;
+  display: flex;  cursor: pointer;
+}
+.__close {  display: none;
+}
+.sidebar__list {  margin-top: 50px;
+}
+.sidebar__list1 {  list-style-type: none;
+}
+.sidebar__list--item {  padding-top: 10px;
+  padding-bottom: 10px;  font-family: TT Lakes;
+  cursor: pointer;}
+.sidebar__footer--icons {
+  width: 60%;  margin-left: 20px;
+  display: flex;
+  justify-content: space-around;}
+.sidebar__footer--adress {
+  margin-left: 40px;  font-family: TT Lakes;
+}
+.sidebar__footer {  margin-top: 80%;
+}
+.sidebar__footer--icons__items {  cursor: pointer;
+}
+.sidebar__header {  display: flex;
+  justify-content: space-around;  height: 40px;
+}
+.menu_button:hover {
+  border-color: aquamarine;  background-color: white;
+}
+.info {  position: relative;
+  margin-left: 40px;  font-family: TT Lakes;
+}
+.info__otziv {  margin-left: 27px;
+  color: #7e7e82;}
+.info__block {
+  display: flex;}
+.info__block--img {
+  width: 48%;  height: 100%;
+  border-radius: 10px;  margin-left: 10px;
+}
+.info__block--text {  display: flex;
+  flex-direction: column;
+  width: 40%;
+  margin-right: 10px;}
+.info__block--text__button {
+  background-color: transparent;  border-color: transparent;
+  font-size: 20px;}
+.linetext {
+  position: relative;
+  width: 100%;  height: 56px;
+  background: linear-gradient(270deg, #fff 0%, #f8f8f8 98%);  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  font-family: 'TTLakes';  
+}
+.__text1{  margin-left: 40px;
+}
+.content {  position: relative;
+  max-width: 1000px;
+  margin: 0 auto;  display: flex;
+  flex-direction: column;  gap: 50px;
+  align-items: flex-start;  margin-top: 40px;
+}
+img {  background-color: transparent;
+}
+.swiper {  width: 100%;
+}
+.grid {  display: grid;
+  grid-template-columns: repeat(12, 1fr);  gap: 10px;
+}
+.swiper-slide {  grid-column: 3 span;
+}
+.content-card {  display: flex;
+  justify-content: space-between;  padding: 20px;
+  min-height: 40px;
+  font-family: sans-serif;  background-color: white;
+}
+.content-2 {
+  position: relative;
+  max-width: 1000px;  margin: 0 auto;
+  display: flex;  flex-direction: column;
+  gap: 50px;  align-items: flex-start;
+  margin-top: 40px;}
+.img {
+  background-color: transparent;}
+.swiper {
+  width: 100%;}
+.grid-2 {
+  display: grid;  grid-template-columns: repeat(12, 1fr);
+  gap: 10px;}
+.swiper-slide-2 {
+  grid-column: 3 span;}
+.content-2-card {
+  display: flex;  justify-content: space-between;
+  padding: 20px;  min-height: 40px;
+  font-family: sans-serif;
+  background-color: white;}
+.swiper-pagination-2{
+  display: none;}
+
+.container {    display: flex;
+    flex-direction: row;    width: 100%;
+}
+.column {    flex-basis: 20%;
+    padding: 10px;    box-sizing: border-box;
+}
+.text {
+    width: 100%;    height: 100%;
+    display: flex;    justify-content: center;
+    align-items: center;    text-align: center;
+    background-color: #f1f1f1;}
+.grid-item {
+  border: 1px solid black;  padding-top: 5px;
+  padding-bottom: 5px;  font-family: "TTLakes";
+} */
+.grid-container__button{
+  background-color: #FF3E79;  border-color: transparent;
+  border-radius: 10px;  color: #fff;
+  font-family: "TTLakes";  align-items: center;
 }
 
